cmake_minimum_required(VERSION 3.16.0)

# missing hello.cc library
# add_executable(main_hello main.c)

# include_directories(../include)

# find_library(HELLO_LIB NAMES hello PATHS "../lib/")

# message(STATUS "Library path HELLO_LIB is " ${HELLO_LIB})

# target_link_libraries(main_hello ${HELLO_LIB})

# set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
